--- a/Portfolio/Refrigeration.html
+++ b/Portfolio/Refrigeration.html
@@ -25,12 +25,12 @@
         interior="" and="" exhibition="" design="" needs.="" transforming="" spaces="" with="" creativity=""
         expertise.="">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://axisdesigners.com/assets/images/logo.png">
-    <link rel="icon" type="image/x-icon" href="https://axisdesigners.com/assets/images/favicon.png">
+    <meta property="og:image" content="../Assets/Images/logo.png">
+    <link rel="icon" type="image/x-icon" href="../assets/images/favicon.png">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="https://axisdesigners.com/assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
@@ -213,10 +213,10 @@
 
                                     <div class="img-wrapper">
                                         <a href=""><img
-                                                src="https://axisdesigners.com/assets/images/refrigeration/ref1.png"
+                                                src="../Assets/Images/refrigeration/ref1.png"
                                                 class="img-fluid w-100"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -224,10 +224,10 @@
 
                                     <div class="mt-3 img-wrapper">
                                         <a href=""><img
-                                                src="https://axisdesigners.com/assets/images/refrigeration/ref2.png"
+                                                src="../Assets/Images/refrigeration/ref2.png"
                                                 class="img-fluid w-100"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -237,10 +237,10 @@
 
                                     <div class="img-wrapper">
                                         <a href=""><img
-                                                src="https://axisdesigners.com/assets/images/refrigeration/ref3.png"
+                                                src="../Assets/Images/refrigeration/ref3.png"
                                                 class="img-fluid w-100"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -251,10 +251,10 @@
 
                                     <div class="img-wrapper">
                                         <a href=""><img
-                                                src="https://axisdesigners.com/assets/images/refrigeration/ref4.png"
+                                                src="../Assets/Images/refrigeration/ref4.png"
                                                 class="img-fluid w-100"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -264,10 +264,10 @@
 
                                     <div class="img-wrapper">
                                         <a href=""><img
-                                                src="https://axisdesigners.com/assets/images/refrigeration/ref5.png"
+                                                src="../Assets/Images/refrigeration/ref5.png"
                                                 class="img-fluid w-100"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -275,10 +275,10 @@
 
                                     <div class="mt-3 img-wrapper">
                                         <a href=""><img
-                                                src="https://axisdesigners.com/assets/images/refrigeration/ref6.png"
+                                                src="../Assets/Images/Refrigeration/ref6.png"
                                                 class="img-fluid w-100"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
