--- a/Portfolio/Solar.html
+++ b/Portfolio/Solar.html
@@ -26,11 +26,11 @@
         expertise.="">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://axisdesigners.com/assets/images/logo.png">
-    <link rel="icon" type="image/x-icon" href="https://axisdesigners.com/assets/images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="../assets/images/favicon.png">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="https://axisdesigners.com/assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
@@ -212,19 +212,19 @@
                                 <div class="col-md-8 mt-3 image">
 
                                     <div class="img-wrapper">
-                                        <a href=""><img src="https://axisdesigners.com/assets/images/solar/solar12.png"
+                                        <a href=""><img src="../Assets/Images/Solar/solar12.png"
                                                 class="img-fluid w-100"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
 
                                     <div class="mt-3 img-wrapper">
-                                        <a href=""><img src="https://axisdesigners.com/assets/images/solar/solar.png"
+                                        <a href=""><img src="../Assets/Images/Solar/solar.png"
                                                 class="img-fluid w-100"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -233,10 +233,10 @@
                                 <div class="col-md-4 mt-3 image">
 
                                     <div class="img-wrapper">
-                                        <a href=""><img src="https://axisdesigners.com/assets/images/solar/solar2.png"
+                                        <a href=""><img src="../Assets/Images/Solar/solar2.png"
                                                 class="img-fluid w-100"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -246,10 +246,10 @@
                                 <div class="col-md-4 mt-3 image">
 
                                     <div class="img-wrapper">
-                                        <a href=""><img src="https://axisdesigners.com/assets/images/solar/solar3.png"
+                                        <a href=""><img src="../Assets/Images/Solar/solar3.png"
                                                 class="img-fluid w-100"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -258,20 +258,20 @@
                                 <div class="col-md-8 mt-3 image">
 
                                     <div class="img-wrapper">
-                                        <a href=""><img src="https://axisdesigners.com/assets/images/solar/solar4.png"
+                                        <a href=""><img src="../Assets/Images/Solar/solar4.png"
                                                 class="img-fluid w-100"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
 
 
                                     <div class="mt-3 img-wrapper">
-                                        <a href=""><img src="https://axisdesigners.com/assets/images/solar/solar5.png"
+                                        <a href=""><img src="../Assets/Images/Solar/solar5.png"
                                                 class="img-fluid w-100"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -280,20 +280,20 @@
                                 <div class="col-md-8 mt-3 image">
 
                                     <div class="img-wrapper">
-                                        <a href=""><img src="https://axisdesigners.com/assets/images/solar/solar6.png"
+                                        <a href=""><img src="../Assets/Images/Solar/solar6.png"
                                                 class="img-fluid w-100"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
 
 
                                     <div class="mt-3 img-wrapper">
-                                        <a href=""><img src="https://axisdesigners.com/assets/images/solar/solar7.png"
+                                        <a href=""><img src="../Assets/Images/Solar/solar7.png"
                                                 class="img-fluid w-100"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -302,10 +302,10 @@
                                 <div class="col-md-4 mt-3 image">
 
                                     <div class="img-wrapper">
-                                        <a href=""><img src="https://axisdesigners.com/assets/images/solar/solar8.png"
+                                        <a href=""><img src="../Assets/Images/Solar/solar8.png"
                                                 class="img-fluid w-100"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -314,10 +314,10 @@
                                 <div class="col-md-4 mt-3 image">
 
                                     <div class="img-wrapper">
-                                        <a href=""><img src="https://axisdesigners.com/assets/images/solar/solar9.png"
+                                        <a href=""><img src="../Assets/Images/Solar/solar9.png"
                                                 class="img-fluid w-100"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -326,20 +326,20 @@
                                 <div class="col-md-8 mt-3 image">
 
                                     <div class="img-wrapper">
-                                        <a href=""><img src="https://axisdesigners.com/assets/images/solar/solar10.png"
+                                        <a href=""><img src="../Assets/Images/Solar/solar10.png"
                                                 class="img-fluid w-100"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
 
 
                                     <div class="mt-3 img-wrapper">
-                                        <a href=""><img src="https://axisdesigners.com/assets/images/solar/solar11.png"
+                                        <a href=""><img src="../Assets/Images/Solar/solar11.png"
                                                 class="img-fluid w-100"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
