--- a/Portfolio/SteelTubes.html
+++ b/Portfolio/SteelTubes.html
@@ -25,12 +25,12 @@
         interior="" and="" exhibition="" design="" needs.="" transforming="" spaces="" with="" creativity=""
         expertise.="">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://axisdesigners.com/assets/images/logo.png">
-    <link rel="icon" type="image/x-icon" href="https://axisdesigners.com/assets/images/favicon.png">
+    <meta property="og:image" content="../Assets/Images/Steeltubes/logo.png">
+    <link rel="icon" type="image/x-icon" href="../assets/images/favicon.png">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="https://axisdesigners.com/assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
@@ -132,76 +132,76 @@
     </section>
 
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-    aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">×</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <div class="">
-                    <div class="text-center">
-                        <img src="../assets/images/start.png" class="img-fluid">
-                        <h3 class="my-3 font36_">Newsletter</h3>
-                        <p class="font20_">Sign up with us to get the latest news, updates and special offers
-                            delivered directly in your inbox</p>
-                    </div>
-                    <form class="w-100 modalForm">
-                        <div class="form-group">
-                            <label>Email</label>
-                            <input type="email" class="form-control" placeholder="Email">
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">×</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="">
+                        <div class="text-center">
+                            <img src="../assets/images/start.png" class="img-fluid">
+                            <h3 class="my-3 font36_">Newsletter</h3>
+                            <p class="font20_">Sign up with us to get the latest news, updates and special offers
+                                delivered directly in your inbox</p>
                         </div>
-                    </form>
+                        <form class="w-100 modalForm">
+                            <div class="form-group">
+                                <label>Email</label>
+                                <input type="email" class="form-control" placeholder="Email">
+                            </div>
+                        </form>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+
+    <section class="">
+        <div class="position-relative">
+            <img src="../assets/images/globe.png" class="w-100 h_250px img-fluid">
+            <h2 class="font48_ top_head_title">See our Global Work</h2>
+        </div>
+    </section>
+
+    <section class="container-fluid mt_70">
+        <div class="row">
+            <div class="col-md-3">
+                <div class="">
+                    <nav class="sidebar  py-2 mb-4">
+                        <ul class="nav flex-column" id="nav_accordion">
+
+                            <li class="nav-item has-submenu">
+                                <a class="nav-link active" href="../Portfolio.html"> Exhibitions &amp;
+                                    Events </a>
+                                <ul class="submenu collapse">
+                                    <li><a class="nav-link active" href="#">American region </a></li>
+
+                                    <li><a class="nav-link" href="#">European Union </a> </li>
+                                    <li><a class="nav-link" href="#">Africa</a></li>
+                                    <li><a class="nav-link" href="#">Asia</a></li>
+                                    <li><a class="nav-link" href="#">Middle East</a></li>
+                                </ul>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link " href="architecture.html">
+                                    Architecture &amp; Interiors </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="Branding.html"> Branding &amp;
+                                    Activation </a>
+                            </li>
+                        </ul>
+                    </nav>
                 </div>
             </div>
-
-        </div>
-    </div>
-</div>
-
-
-<section class="">
-    <div class="position-relative">
-        <img src="../assets/images/globe.png" class="w-100 h_250px img-fluid">
-        <h2 class="font48_ top_head_title">See our Global Work</h2>
-    </div>
-</section>
-
-<section class="container-fluid mt_70">
-    <div class="row">
-        <div class="col-md-3">
-            <div class="">
-                <nav class="sidebar  py-2 mb-4">
-                    <ul class="nav flex-column" id="nav_accordion">
-
-                        <li class="nav-item has-submenu">
-                            <a class="nav-link active" href="../Portfolio.html"> Exhibitions &amp;
-                                Events </a>
-                            <ul class="submenu collapse">
-                                <li><a class="nav-link active" href="#">American region </a></li>
-
-                                <li><a class="nav-link" href="#">European Union </a> </li>
-                                <li><a class="nav-link" href="#">Africa</a></li>
-                                <li><a class="nav-link" href="#">Asia</a></li>
-                                <li><a class="nav-link" href="#">Middle East</a></li>
-                            </ul>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link " href="architecture.html">
-                                Architecture &amp; Interiors </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="Branding.html"> Branding &amp;
-                                Activation </a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
             <div class="col-md-8">
                 <span class="text_gradient font20_ pl-3">Steel Tubes</span>
 
@@ -213,10 +213,10 @@
 
                                     <div class="img-wrapper">
                                         <a href=""><img
-                                                src="https://axisdesigners.com/assets/images/steeltubes/steel10.png"
+                                                src="../Assets/Images/Steeltubes/steel10.png"
                                                 class="img-fluid w-100"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -224,10 +224,10 @@
 
                                     <div class="mt-3 img-wrapper">
                                         <a href=""><img
-                                                src="https://axisdesigners.com/assets/images/steeltubes/steel.png"
+                                                src="../Assets/Images/Steeltubes/steel.png"
                                                 class="img-fluid w-100"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -237,10 +237,10 @@
 
                                     <div class="img-wrapper">
                                         <a href=""><img
-                                                src="https://axisdesigners.com/assets/images/steeltubes/steel2.png"
+                                                src="../Assets/Images/Steeltubes/steel2.png"
                                                 class="img-fluid w-100"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -251,10 +251,10 @@
 
                                     <div class="img-wrapper">
                                         <a href=""><img
-                                                src="https://axisdesigners.com/assets/images/steeltubes/steel3.png"
+                                                src="../Assets/Images/Steeltubes/steel3.png"
                                                 class="img-fluid w-100"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -264,10 +264,10 @@
 
                                     <div class="img-wrapper">
                                         <a href=""><img
-                                                src="https://axisdesigners.com/assets/images/steeltubes/steel4.png"
+                                                src="../Assets/Images/Steeltubes/steel4.png"
                                                 class="img-fluid w-100"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -275,10 +275,10 @@
 
                                     <div class="mt-3 img-wrapper">
                                         <a href=""><img
-                                                src="https://axisdesigners.com/assets/images/steeltubes/steel5.png"
+                                                src="../Assets/Images/Steeltubes/steel5.png"
                                                 class="img-fluid w-100"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -288,20 +288,20 @@
 
                                     <div class="img-wrapper">
                                         <a href=""><img
-                                                src="https://axisdesigners.com/assets/images/steeltubes/steel6.png"
+                                                src="../Assets/Images/Steeltubes/steel6.png"
                                                 class="img-fluid w-100"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
 
 
                                     <div class="mt-3 img-wrapper">
-                                        <a href=""><img src="https://axisdesigners.com/assets/images/bg-blue-hori.png"
+                                        <a href=""><img src="../Assets/Images/Steeltubes/bg-blue-hori.png"
                                                 class="img-fluid w-100"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -311,10 +311,10 @@
 
                                     <div class="img-wrapper">
                                         <a href=""><img
-                                                src="https://axisdesigners.com/assets/images/steeltubes/steel7.png"
+                                                src="../Assets/Images/Steeltubes/steel7.png"
                                                 class="img-fluid w-100"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -324,10 +324,10 @@
 
                                     <div class="img-wrapper">
                                         <a href=""><img
-                                                src="https://axisdesigners.com/assets/images/steeltubes/steel9.png"
+                                                src="../Assets/Images/Steeltubes/steel9.png"
                                                 class="img-fluid w-100"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
